--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "install": "^0.13.0",
     "mysql2": "^2.3.3",
     "npm": "^8.14.0",
