--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/Obiwan-Jabronii/just-tech-news#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "express-sessions": "^1.0.6",
     "install": "^0.13.0",
     "mysql2": "^2.3.3",
     "npm": "^8.14.0",
